src/components/Header/styles/LogQuery.module.css
.container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0 1rem;
}
  
  .innerContainer {
	display: flex;
	height: 100%;
	align-items: center;
	width: 100%;
  }
  
  .refreshNowBtn {
	background: #fff;
	padding: 0;
	width: 36px;
	color: #211F1F;
	border: 1px #e9ecef solid;
    border-radius: rem(8px);
	&:hover {
		color: black;
	}
  }

  .refreshNowBtn:hover {
    background-color: #E0E0E0;
  }
  
  .streamButton {
	background: #fff;
	margin-right: 0.625rem;
	color: #211F1F;
	border: 1px #e9ecef solid;
  }
  
  .intervalbtn {
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: white;
	color: #211F1F;
	border: 1px #e9ecef solid;
	padding: 0.625rem 1rem;
    border-radius: rem(8px);
	&:hover {
		color: black;
	}
  }
  
  .intervalbtn:hover {
    background-color: #E0E0E0;
  }
  
  .homeIcon {
	size: 24px;
  }
  
  .timeRangeContainer {
	display: flex;
  }
  
  .fixedRangeContainer {
	display: flex;
	flex-direction: column;
	background: #f8f9fa;
	margin-left: 0.5rem;
	border-radius: 0.25rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
	overflow: hidden;
  }
  
  .fixedRangeBtn {
	color: #000;
	padding: 0.75rem;
	font-size: 0.875rem;
	background: #f8f9fa;
	/* text-transform: capitalize; */
	&:hover {
		color: black !important;
		&:disabled {
			color: white !important;
		}
	}
  }
  
  .fixedRangeBtn:hover {
	background: #ced4da;
  }

  .fixedRangeBtn:disabled {
	cursor: not-allowed;
	background: #424242;
	font-weight: 600;
	color: #fff;

  }
  
  .customRangeContainer {
	padding: 0.625rem 1rem;
	min-width: 20rem;
	flex: 1;
	display: flex;
	flex-direction: column;
	justify-content: stretch;
  }
  
  .customTimeRangeFooter {
	display: flex;
	margin-top: auto;
	justify-content: flex-end;
	align-items: center;
  }
  
  .searchContainer {
	display: flex;
	padding-right: 0.75rem;
  }
  
  .searchTypeBtn {
	border: 1px #f1f3f5 solid;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	background: #545beb;
	color: #fff;
	border-right: none;
	font-weight: 700;
	padding-right: 0.75rem;
  }
  
  .searchTypeActive {
	background: #545beb;
	font-weight: 500;
	color: #fff;
  }
  
  .searchTypeActive:hover {
	background: #fc466b;
  }
  
  .searchInput {
	width: 100%;
	flex: 1;
  }
  
  .searchInput input {
	background: #fff;
	border: 1px #e9ecef solid;
    border-radius: rem(8px);
	font-weight: 500;
  }
  
  .toggleBtn {
	background-color: white;
	padding: 6px 12px;
	margin-right: 0.625rem;
	color: #211F1F;
	border: 1px #e9ecef solid;
  }
  
  .toggleBtn:hover {
	background: #f1f3f5;
  }
  
  .timeRangeBTn {
	background-color: white;
	color: var(--mantine-color-gray-7);
	padding: 0 0.5rem;
	border-radius: 0;
	border-right: 1px solid var(--mantine-color-gray-2);
	border-left: 1px solid var(--mantine-color-gray-2);
  }
  
  .timeRangeBTn:hover {
    background-color: #E0E0E0;
	color: black;
  }
  
  .dropdownBtn {
	margin-right: 0.625rem;
	border-radius: rem(8px);
  }

  .dropdownOption {
	color: #211F1F;
	font-size: var(--mantine-font-size-md);
  }

  .liveTailFilterContainer {
	display: flex;
	gap: 12px;
	margin-right: 20px;
  }
  
  .fixedRangeBtnSelected {
	background: #545beb !important;
	font-weight: 500;
	color: white;
  }
  
  .fixedRangeBtnSelected:hover {
	background: #f1f3f5;
  }
  
  .customTimeRangeApplyBtn {
	background: #545BEB;
	color: white;
	&:hover {
		background: #FC466B;
	}
}

.customTimeRangeApplyBtn:disabled {
	background-color: var(--mantine-color-gray-4);
}

.customTimeRangeApplyBtn:disabled:hover {
	background-color: var(--mantine-color-gray-4);
}

.streamSelectDescription {
	font-size: 12px;
	font-weight: 500;
	color: var(--mantine-color-gray-6);
}

.streamInput {
	/* border: none; */
	/* padding-left: 0; */
	/* padding-right: 30px; */
	/* height: 50px; */
	/* font-size: 24px; */
	/* font-weight: 600; */
	/* margin-top: -10px; */
	/* background-color: transparent; */
	cursor: pointer;
	border: 1px var(--mantine-color-gray-2) solid;
	border-radius: rem(8px);

	/* width: 200px; */

}

.chevronDown {
	color: var(--mantine-color-gray-9);
}

.streamSelect {
	/* margin-top: 10px;  */
	 /* adjustments for neg margin for input */
	/* margin-left: 0.625rem; */
}

.iconBtn {
    cursor: pointer;
    align-items: center;
	/* padding: 0.25rem; */
	border-radius: 0.25rem;
	/* padding: 0.25rem 0; */
}

.iconBtnIcon {
    color: var(--mantine-color-brandPrimary-6);
	/* color: white;
	background-color: var(--mantine-color-brandPrimary-4); */
	border-radius: 0.25rem;
	/* padding: 0.25rem; */
}

.iconBtnLabel {
    font-size: 0.8rem;
	white-space: nowrap;
}


.logsSecondaryToolbar {
	width: '100%';
	flex-direction: row;
	padding: 1rem 0.625rem;
}

.filterContainer {
	background-color: white;
	/* padding: 4px 12px; */
	color: #211F1F;
	border: 1px var(--mantine-color-gray-4) solid;
	border-radius: rem(8px);
	cursor: pointer;
	/* height: 2.2rem; */
    overflow: auto;
    flex: 1;
	margin-right: 0.625rem;
	flex-direction: row;
	/* height: fit-content; */
}

.modeContainer {
	width: 5rem;
	height: 100%;
	text-align: center;
	align-items: center;
	justify-content: center;
	border-right: 1px solid var(--mantine-color-gray-4);
}

.modeLabel {
	/* color: white; */
	font-weight: 600;
}

.modeButton {
	border-top-right-radius: 0px !important;
	border-bottom-right-radius: 0px !important;
	width: 6rem;
	border-top: none !important;
	border-left: none !important;
	border-bottom: none !important;
}

.placeholderText {
	color: var(--mantine-color-gray-5);
	font-size: 1rem;
	font-weight: 500;
}

.timeRangeBtnContainer {
	flex-direction: row;
	gap: 0;
	border: 1px solid var(--mantine-color-gray-3);
	overflow: hidden;
	border-radius: rem(8px);
}

.timeRangeCtrlIcon {
	height: 100%;
	align-items: center; 
	justify-content: center;	
	&:hover {
		background-color: #E0E0E0;
		color: black;
	}
	padding: 0 0.25rem;
	color: var(--mantine-color-gray-7);
	cursor: pointer;
}

.changeIntervalContainer {
	flex-direction: row;
	margin-top: 0.5rem;
	justify-content: space-between;
	align-items: center;
}

.changeIntervalLabel {
	font-size: 0.9rem;
	font-weight: 500;
	text-align: center;
}

